# spm-preprocessing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: course_2060.yaml  course_2065.yaml
data/: README.md
scripts/: metrics_calculation.py  mining.py  order.py  percentagesupport.py  process_mining.py  run_pipeline.py  scenario_metrics.py  simplification.py  support_percentage.py
scripts/viz/: analysis.py  comparison_boxplots.py  plot_patterns.py
src/spm/: __init__.py  cli.py  config.py  io.py  metrics.py  mining.py  paths.py  pipeline.py  sceneries.py  simplification.py
tests/: conftest.py  test_cli.py  test_integration.py  test_metrics.py  test_mining.py  test_simplification.py
